bugs fixed and changed