@@ -1,6 +1,7 @@
 // src/main/java/com/pulse/fineflux/config/SecurityConfig.java
 package com.pulse.fineflux.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -10,10 +11,14 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class SecurityConfig {
+
+    @Value("${cors.allowed.origins:http://localhost:8081,https://fineflux.com,https://*.fineflux.com}")
+    private String corsAllowedOrigins;
 
     @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -31,12 +36,11 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration cfg = new CorsConfiguration();
-        // Use allowedOriginPatterns for wildcard/subdomain and credentials support (Spring 2.4+)
-        cfg.setAllowedOriginPatterns(List.of(
-                "http://localhost:8081",
-                "https://fineflux.com",
-                "https://*.fineflux.com"
-        ));
+
+        // Parse CORS allowed origins from environment variable
+        List<String> allowedOrigins = Arrays.asList(corsAllowedOrigins.split(","));
+        cfg.setAllowedOriginPatterns(allowedOrigins);
+
         cfg.setAllowedMethods(List.of("GET","POST","PUT","DELETE","PATCH","OPTIONS"));
         cfg.setAllowedHeaders(List.of(
                 "Content-Type",
@@ -44,12 +48,12 @@ public class SecurityConfig {
                 "X-Requested-With",
                 "Accept",
                 "Origin",
-                "X-Employee-Id"  // ← ADDED THIS
+                "X-Employee-Id"
         ));
         cfg.setExposedHeaders(List.of(
                 "Authorization",
                 "Location",
-                "X-Employee-Id"  // ← ADDED THIS
+                "X-Employee-Id"
         ));
         cfg.setAllowCredentials(true);
         cfg.setMaxAge(3600L);
